sidebar dark mode fix

--- a/src/components/admin/sidebar/sidebar.css
+++ b/src/components/admin/sidebar/sidebar.css
@@ -128,6 +128,31 @@ a {
   transition: all 2s ease-in-out;
 }
 
+.sideBar_accordian .accordion-item {
+  border: none;
+  background-color: transparent;
+}
+
+.sideBar_accordian .accordion-item .accordion-button {
+  background-color: transparent;
+  box-shadow: none;
+  color: #496356;
+  font-weight: 600;
+}
+
+.sideBar_accordian h2.accordion-header {
+  margin-left: 1.1rem;
+}
+
+/* .sideBar_accordian h2.accordion-header button span {
+  color: #acb9ac !important;
+} */
+
+.sideBar_accordian .accordion-body {
+  padding: 0;
+  margin-left: 0.5rem;
+}
+
 @media screen and (max-width: 1024px) {
   .sidebar {
     display: none;
@@ -160,23 +185,4 @@ a {
     margin-top: 6px;
     margin-left: 20px;
   }
-}
-.sideBar_accordian .accordion-item {
-  border: none;
-}
-
-.sideBar_accordian .accordion-item .accordion-button {
-  background-color: transparent;
-  box-shadow: none;
-  color: #496356;
-  font-weight: 600;
-}
-
-.sideBar_accordian h2.accordion-header {
-  margin-left: 1.1rem;
-}
-
-.sideBar_accordian .accordion-body {
-  padding: 0;
-  margin-left: 0.5rem;
 }
